# DataAssimBench

./: .readthedocs.yaml  README.md  environment.yml  pip_constraints.txt  pyproject.toml
.github/workflows/: python-ci-conda.yml  python-ci-pip.yml
dabench/: __init__.py
dabench/dacycler/: __init__.py  _backprop4d.py  _dacycler.py  _etkf.py  _utils.py  _var3d.py  _var4d.py  _var4d_backprop.py  _var4d_backprop_exacthessian.py
dabench/dasupport/: __init__.py  generate_era5_ensemble.py
dabench/data/: __init__.py  _barotropic.py  _data.py  _enso_indices.py  _gcp.py  _lorenz63.py  _lorenz96.py  _pyqg.py  _pyqg_jax.py  _qgs.py  _sqgturb.py  _utils.py  _xarray_accessor.py  aws.py  azure.py  barotropic.py  base.py  data.py  dinosaur.py  enso_idx.py  enso_indices.py  gcp.py  lorenz63.py  lorenz96.py  pyqg.py  pyqg_jax.py  qgs.py  random_uni.py  sqgturb.py
dabench/metrics/: __init__.py  _deterministic.py  _ensemble.py  _utils.py
dabench/model/: __init__.py  _model.py  _neuralgcm  _neuralgcm.py  _neuralgcm.yaml  _rc.py
dabench/observer/: __init__.py  _observer.py
dabench/obsop/: __init__.py  _obsop.py
dabench/suppl_data/: README.md  era5_japan_slp.nc  sqgturb_57600steps.npy
dabench/support/: utils.py
dabench/utils/: __init__.py  timing.py
dabench/vector/: __init__.py  _obs_vector.py  _state_vector.py  _vector.py
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  dabench.dacycler.rst  dabench.data.rst  dabench.metrics.rst  dabench.model.rst  dabench.observer.rst  dabench.obsop.rst  dabench.rst  dabench.vector.rst  index.rst
tests/: aws_class_test.py  azure_class_test.py  barotropic_class_test.py  base_class_test.py  dacycler_base_test.py  dacycler_etkf_test.py  dacycler_var3d_test.py  dacycler_var4d_var4dbp_test.py  data_aws_test.py  data_barotropic_test.py  data_base_test.py  data_class_test.py  data_enso_indices_test.py  data_gcp_test.py  data_lorenz63_test.py  data_lorenz96_test.py  data_pyqg_test.py  data_qgs_test.py  data_sqgturb_test.py  enso_idx_class_test.py  gcp_class_test.py  lorenz63_class_test.py  lorenz96_class_test.py  metrics_deterministic.py  model_base_test.py  observer_base_test.py  obsop_base_test.py  pyqg_class_test.py  sqgturb_class_test.py  vector_obs_test.py  vector_state_test.py
