[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dabenc"
version = "0.0.1"
authors = [
  { name="Steve Penny", email="steve.penny@sofarocean.com" },
  { name="Kylen Solvik", email="kylen.solvik@colorado.edu"}
]
description = "Data Assimilation Benchmarking Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StevePny/DataAssimBench"
"Bug Tracker" = "https://github.com/StevePny/DataAssimBench/issues"

