[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dabench"
version = "0.0.1"
authors = [
  { name="Steve Penny", email="steve.penny@sofarocean.com" },
  { name="Kylen Solvik", email="kylen.solvik@colorado.edu"}
]
description = "Data Assimilation Benchmarking Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "numpy",
    "scipy",
    "optax",
    "xarray"
]

[project.optional-dependencies]
tests = [
    "pytest"
]

examples = [
    "notebook",
    "ray[train,tune]",
    "pandas",
    "matplotlib"
]

cloud = [
    "zarr",
    "fsspec",
    "aiohttp",
    "dask"
]

dev = [
    "dabench[tests, qgs, pyqg, cloud]",
    "flake8"
]

pyqg = [
    "pyqg-jax"
]

qgs = [
    "qgs"
]

full = [
    "dabench[pyqg, examples, qgs, cloud, tests]"
]


[project.urls]
"Homepage" = "https://github.com/StevePny/DataAssimBench"
"Bug Tracker" = "https://github.com/StevePny/DataAssimBench/issues"

